# Full-Stack-AI-ML-Developer

./: README.md
fastapi_concepts/: main.py  pyproject.toml
frontend/javascript/: 1_variable.js  2_operators.js  first.js  index.html
python/: temp.py
python/oops concepts/: 10_instance_variable_declaration.py  11_access_instance_variable.py  12_delete_instance_variable.py  13_declare_static_variable.py  14_access_static_variable.py  15_delete_static_variable.py  16_local_variables.py  17_mini_bank_application.py  18_instance_method.py  19_setter_getter_methods.py  1_class_syntax.py  20_class_methods.py  21_count_object_creation.py  22_static_method.py  23_access_members_of_one_class_inside_another_class.py  24_inner_classes.py  26_multilevel_inner_class.py  27_multiple_inner_classes.py  28_inner_class.py  29_nested_methods.py  2_class_example.py  31_destructor.py  32_destructor.py  33_count_references_of_object.py  34_composition.py  35_HAS_A_relation.py  36_news_channel_mini_app_composition.py  37_IS_A_relationship.py  38_inheritance.py  39_person_employee_inheritance.py  3_class_test.py  40_inheritance.py  41_inheritance_composition.py  42_composition_aggregation.py  43_single_inheritance.py  44_multilevel_inheritance.py  45_hierarchical_inheritance.py  46_multiple_inheritance.py  47_multiple_inheritance.py  48_hybrid_inheritance.py  (+33 more)
