[project]
name = "fastapi-concepts"
version = "0.1.0"
description = ""
authors = [
    {name = "shubham",email = "shubhambhade5023@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
